package Task1.Oops;

public class FlapFly implements FlyBehavior {
    public void performFly() {
        System.out.println("Flaps wings rapidly");
    }
}
