package Task1.Oops;

public interface FlyBehavior {
    void performFly();
}
