package Task1.Oops;

public interface Flyable {
    void fly();
}
