package Task1.Oops;

public class GlideFly implements FlyBehavior {
    public void performFly() {
        System.out.println("Flying by gliding smoothly.");
    }
}
