package Task1.Oops;

public class Penguin extends Bird implements Swimmable {
    public void swim() {
        System.out.println("Penguin swims fast in cold water.");
    }
}

