package Task1.Oops;

public interface Singable {
    void sing();
}
