package Task1.Oops;

public interface Swimmable {
    void swim();
}

